<resources>
    <string name="app_name">Projeto Juneko</string>
    <string name="ultimos_pedidos">Ultimos Pedidos</string>
    <string name="clique_aqui">Clique aqui.</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="acessar">Acessar</string>
    <string name="juneko_b_b"><![CDATA[Juneko B&B]]></string>
    <string name="recuperar_insira_email">Recuperar senha \nBasta inserir seu e-mail</string>
    <string name="email">E-mail</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="enviar">Enviar</string>
    <string name="administrador">Administrador</string>
    <string name="gerente">Gerente</string>
    <string name="cozinha">Cozinha</string>
    <string name="atendente">Atendente</string>
    <string name="selecione_nivel_privilegio">Selecione o nível de privilégio</string>
    <string name="cadastrar_novo_colaborador">Cadastrar Novo Colaborador</string>
    <string name="nome_colaborador">Nome:</string>
    <string name="email_colaborador">E-mail:</string>
    <string name="carregando_aguarde">Carregando, aguarde!</string>
    <string name="logo_juneko">Logo Juneko</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="novo_pedido">Novo Pedido</string>
    <string name="comer_local_ou_viagem">Comer no local ou viagem?</string>
    <string name="viagem">Viagem</string>
    <string name="local">Local</string>
    <string name="nome_cliente">Nome do Cliente</string>
    <string name="data_pedido">Data do Pedido:</string>
    <string name="status">Status:</string>
    <string name="quantidade_itens">Quantidade de itens:</string>
    <string name="valor_total">Valor total:</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="selecione_opcao_desejada">Selecione a opção desejada:</string>
    <string name="add_novo_usuario">Add Novo Usuário</string>
    <string name="saldo_caixa">Saldo em Caixa</string>
    <string name="controle_estoque">Controle do Estoque</string>
    <string name="lista_bebidas">Lista de Bebidas</string>
    <string name="lista_lanches">Lista dos Lanches</string>
    <string name="sobre">sobre</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="esqueceu_senha_clique_aqui">Clique aqui.</string>
    <string name="selecionar_forma_pagamento">Selecionar Forma de Pagamento</string>
    <string name="adicionar_item">Adicionar Item</string>
    <string name="colaborador">Colaborador</string>
    <string name="senha_colaborador">Senha:</string>
    <string name="cadastrar_novo_usuario">Cadastrar Novo Usuário</string>
</resources>